syntax = "proto3";

package user;


message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
}

message GetUserRequest {
  int32 user_id = 1;
}

message GetUserResponse {
  User user = 1;
}

message CreateOrUpdateUserRequest {
  int32 user_id = 1;
  string name = 2;
  string email = 3;
}

message CreateOrUpdateUserResponse {
  User user = 1;
}

message DeleteUserRequest {
  int32 user_id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}

message getUsersRequest {
  string query = 1;
}

message getUsersResponse {
  repeated User users = 1;
}

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
  rpc CreateOrUpdateUser(CreateOrUpdateUserRequest) returns (CreateOrUpdateUserResponse) {}
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
  rpc getUsers(getUsersRequest) returns (getUsersResponse) {}
}
